Fix comment layout bug for comments that trail onto a new line

--- a/homerate/reviews/static/css/base.scss
+++ b/homerate/reviews/static/css/base.scss
@@ -272,7 +272,9 @@ $searchPadding: 20px;
 }
 
 .reviewPoint, .reviewComment {
+  max-width: 50%;
   display: inline-block;
+  vertical-align: middle;
 }
 
 /* New Report Page */
